--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.19.0",
-    "express": "^4.13.3",
-    "jade": "^1.11.0",
-    "request": "^2.67.0"
+    "jquery": "^2.2.0",
+    "request": "^2.67.0",
+    "slack-node": "^0.1.7"
   }
 }
