--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.19.0",
+    "install": "^0.8.2",
     "jquery": "^2.2.0",
+    "log4js": "^1.0.1",
+    "npm": "^4.0.3",
     "request": "^2.67.0",
     "slack-node": "^0.1.7"
   }
